--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "author": "Aadhavan",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^21.5.0",
-    "pdf-parse": "^1.1.1",
-    "axios": "^1.6.0",
-    "form-data": "^4.0.0",
-    "cheerio": "^1.0.0-rc.12"
+    "express": "^5.1.0",
+    "puppeteer": "^24.27.0",
+    "pdf-parse": "^2.4.5",
+    "axios": "^1.13.1",
+    "form-data": "^4.0.4",
+    "cheerio": "^1.1.2"
   }
 }
