--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "Aadhavan",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0",
-    "puppeteer": "^24.27.0",
-    "pdf-parse": "^2.4.5",
+    "@sparticuz/chromium": "^141.0.0",
     "axios": "^1.13.1",
+    "cheerio": "^1.1.2",
+    "express": "^5.1.0",
     "form-data": "^4.0.4",
-    "cheerio": "^1.1.2"
+    "pdf-parse": "^2.4.5",
+    "puppeteer": "^24.27.0",
+    "puppeteer-core": "^24.27.0"
   }
 }
