--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "form-data": "^4.0.4",
     "pdf-parse": "^2.4.5",
     "puppeteer-core": "^24.27.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^24.27.0"
   }
 }
