Exclude puppeteer from Vercel build

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,23 @@
 {
-  "version": 2,
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxDuration": 300
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server.js"
-    }
-  ]
+    "version": 2,
+    "env": {
+        "NODE_ENV": "production"
+    },
+    "builds": [
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "maxDuration": 300,
+                "includeFiles": ["lib/**"],
+                "excludeFiles": ["node_modules/puppeteer/**"]
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ]
 }
