--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "build": "npm install && npx puppeteer browsers install chrome",
     "postinstall": "npx puppeteer browsers install chrome",
     "dev": "bun run --watch server.js",
     "setup": "bun run setup.js",
