--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "llm-code-deployment",
+  "name": "llm-analysis-quiz-solver",
   "version": "1.0.0",
-  "description": "Automated app builder and deployer using LLMs and GitHub Pages",
+  "description": "LLM-powered quiz solver for data analysis tasks - IIT Madras TDS Course",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "bun --watch server.js",
+    "start": "bun run server.js",
+    "dev": "bun run --watch server.js",
     "setup": "bun run setup.js",
     "test": "bun run test.js"
   },
   "keywords": [
     "llm",
-    "github",
-    "deployment",
-    "automation"
+    "quiz",
+    "data-analysis",
+    "puppeteer",
+    "iit-madras"
   ],
   "author": "Aadhavan",
   "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "dependencies": {
-    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "octokit": "^3.1.2"
+    "puppeteer": "^21.5.0",
+    "pdf-parse": "^1.1.1",
+    "axios": "^1.6.0",
+    "form-data": "^4.0.0",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
