--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pdf-parse": "^1.1.1",
     "axios": "^1.6.0",
     "form-data": "^4.0.0",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "sharp": "^0.33.0"
   }
 }
